--- a/css/index.css
+++ b/css/index.css
@@ -84,6 +84,29 @@ h1 {
   margin-top: 2.1875em;
 }
 
+.message{
+  color:black;
+  padding:2em;
+}
+
+.from-me{
+  background-color: var(--col-accent1);
+  display: block;
+  float: right;
+  border-radius: 1.5em;
+  padding: 2em;
+  box-shadow: -.5em .5em black;
+}
+
+.from-them{
+  background-color:rgb(252, 190, 233);
+  display: block;
+  float: left;
+  border-radius: 1.5em;
+  padding: 2em;
+  box-shadow: .5em .5em black;
+}
+
 @media screen and (min-width: 40em) {
   .others {
     display: block;
